feat: 세션참여 로직 수정, dto 수정